@@ -579,7 +579,9 @@ static const char pyzk_get_doc[] =
 "\n"
 "(subsequent parameters are optional)\n"
 " watcher if not None, a watch will be set at the server to notify \n"
-"the client if the node changes.\n"
+" the client if the node changes.\n"
+" bufferlen: This value defaults to 1024*1024 - 1Mb. This method returns \n"
+" the minimum of bufferlen and the true length of the znode's data. \n"
 "RETURNS:\n"
 " the data associated with the node\n"
 "OK operation completed succesfully\n"
